fixed layout issues

--- a/client/src/components/Courses/CourseItem/TutorCourseItem.module.scss
+++ b/client/src/components/Courses/CourseItem/TutorCourseItem.module.scss
@@ -60,3 +60,7 @@
   height: 35px;
   margin-right: 10px;
 }
+
+.listEnrolledStudent {
+  min-height: 100px;
+}
